docs/k8s/example-spring-cloud-kubernetes-server-movie.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-spring-cloud-kubernetes-server-movie
  namespace: example-spring-cloud-kubernetes
  labels:
    app: example-spring-cloud-kubernetes-server-movie
spec:
  type: NodePort
  ports:
    - port: 8011
  selector:
    app: example-spring-cloud-kubernetes-server-movie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-spring-cloud-kubernetes-server-movie
  namespace: example-spring-cloud-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-spring-cloud-kubernetes-server-movie
  template:
    metadata:
      labels:
        app: example-spring-cloud-kubernetes-server-movie
    spec:
      containers:
      - name: example-spring-cloud-kubernetes-server-movie
        image: toquery/example-spring-cloud-kubernetes-server-movie:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8011
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8011
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8011
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
