docs/k8s/example-spring-cloud-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: example-spring-cloud-kubernetes
  name: example-spring-cloud-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # 开启use-regex，启用path的正则匹配
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: example-spring-cloud-kubernetes.toquery.io
      http:
        paths:
          - path: /account
            backend:
              serviceName: example-spring-cloud-kubernetes-server-account
              servicePort: 8010
          - path: /movie
            backend:
              serviceName: example-spring-cloud-kubernetes-server-movie
              servicePort: 8011
